name:                yesodbook-ru-examples
version:             1.2.6.1
synopsis:            Examples for Russian translation of the Yesod book (http://www.yesodweb.com/book-1.1/)
homepage:            https://bitbucket.org/darkus/Yesod
author:              
maintainer:          
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable type-families
  default-language:    Haskell2010
  hs-source-dirs:      tex/haskell
  main-is:             type-families.hs
  build-depends:       base >=4.6 && <4.7
                     , bytestring

executable hello-world
  default-language:    Haskell2010
  hs-source-dirs:      tex/basics
  main-is:             hello-world.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable routes
  default-language:    Haskell2010
  hs-source-dirs:      tex/basics
  main-is:             routes.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable i18n
  default-language:    Haskell2010
  hs-source-dirs:      tex/shakespearean-templates
  main-is:             i18n.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-html
                     , hamlet
                     , shakespeare
                     , text
                     , yesod

executable quasiquoter
  default-language:    Haskell2010
  hs-source-dirs:      tex/shakespearean-templates
  main-is:             quasiquoter.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-html
                     , hamlet
                     , shakespeare
                     , text

executable query-string
  default-language:    Haskell2010
  hs-source-dirs:      tex/shakespearean-templates
  main-is:             query-string.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-builder
                     , blaze-html
                     , hamlet
                     , shakespeare
                     , http-types
                     , text

executable shakespeare-text
  default-language:    Haskell2010
  hs-source-dirs:      tex/shakespearean-templates
  main-is:             shakespeare-text.hs
  build-depends:       base >=4.6 && <4.7
                     , shakespeare
                     , text

executable url-interpolation
  default-language:    Haskell2010
  hs-source-dirs:      tex/shakespearean-templates
  main-is:             url-interpolation.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-html
                     , hamlet
                     , shakespeare
                     , text

executable url-interpolation-query
  default-language:    Haskell2010
  hs-source-dirs:      tex/shakespearean-templates
  main-is:             url-interpolation-query.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-builder
                     , blaze-html
                     , hamlet
                     , http-types
                     , shakespeare
                     , text

executable mixin
  default-language:    Haskell2010
  hs-source-dirs:      tex/shakespearean-templates
  main-is:             mixin.hs
  build-depends:       base >=4.6 && <4.7
                     , shakespeare
                     , text


executable var-interpolation
  default-language:    Haskell2010
  hs-source-dirs:      tex/shakespearean-templates
  main-is:             var-interpolation.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-html
                     , hamlet
                     , shakespeare

executable widgets-synopsis
  default-language:    Haskell2010
  hs-source-dirs:      tex/widgets
  main-is:             widgets-synopsis.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable example
  default-language:    Haskell2010
  hs-source-dirs:      tex/widgets
  main-is:             example.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable style
  default-language:    Haskell2010
  hs-source-dirs:      tex/widgets
  main-is:             style.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable script
  default-language:    Haskell2010
  hs-source-dirs:      tex/widgets
  main-is:             script.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable slashes
  default-language:    Haskell2010
  hs-source-dirs:      tex/yesod-typeclass
  main-is:             slashes.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-builder
                     , http-types
                     , text
                     , yesod

executable getmessage
  default-language:    Haskell2010
  hs-source-dirs:      tex/yesod-typeclass
  main-is:             getmessage.hs
  build-depends:       base >=4.6 && <4.7
                     , time
                     , yesod

executable errorpage
  default-language:    Haskell2010
  hs-source-dirs:      tex/yesod-typeclass
  main-is:             errorpage.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable args
  default-language:    Haskell2010
  hs-source-dirs:      tex/routing-and-handlers
  main-is:             args.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable logging
  default-language:    Haskell2010
  hs-source-dirs:      tex/routing-and-handlers
  main-is:             logging.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable urls
  default-language:    Haskell2010
  hs-source-dirs:      tex/routing-and-handlers
  main-is:             urls.hs
  build-depends:       base >=4.6 && <4.7
                     , containers
                     , text
                     , yesod
                     , yesod-auth

executable forms-synopsis
  default-language:    Haskell2010
  hs-source-dirs:      tex/forms
  main-is:             forms-synopsis.hs
  build-depends:       base >=4.6 && <4.7
                     , time
                     , text
                     , yesod-form
                     , yesod

executable monadic-forms
  default-language:    Haskell2010
  hs-source-dirs:      tex/forms
  main-is:             monadic-forms.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable input-forms
  default-language:    Haskell2010
  hs-source-dirs:      tex/forms
  main-is:             input-forms.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable nonuser-values
  default-language:    Haskell2010
  hs-source-dirs:      tex/forms
  main-is:             nonuser-values.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , time
                     , yesod

executable session-example
  default-language:    Haskell2010
  hs-source-dirs:      tex/sessions
  main-is:             session-example.hs
  build-depends:       base >=4.6 && <4.7
                     , clientsession
                     , yesod

executable messages
  default-language:    Haskell2010
  hs-source-dirs:      tex/sessions
  main-is:             messages.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable ultimate-destination
  default-language:    Haskell2010
  hs-source-dirs:      tex/sessions
  main-is:             ultimate-destination.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable persistent-synopsis
  default-language:    Haskell2010
  hs-source-dirs:      tex/persistent
  main-is:             persistent-synopsis.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time
                     , transformers

executable migration
  default-language:    Haskell2010
  hs-source-dirs:      tex/persistent
  main-is:             migration.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time
                     , transformers

executable mkmigrate
  default-language:    Haskell2010
  hs-source-dirs:      tex/persistent
  main-is:             mkmigrate.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time

executable uniqueness
  default-language:    Haskell2010
  hs-source-dirs:      tex/persistent
  main-is:             uniqueness.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , resourcet
                     , time
                     , transformers

executable attributes
  default-language:    Haskell2010
  hs-source-dirs:      tex/persistent
  main-is:             attributes.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time
                     , transformers

executable attribute-default
  default-language:    Haskell2010
  hs-source-dirs:      tex/persistent
  main-is:             attribute-default.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time

executable attribute-whitespace
  default-language:    Haskell2010
  hs-source-dirs:      tex/persistent
  main-is:             attribute-whitespace.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time

executable relations
  default-language:    Haskell2010
  hs-source-dirs:      tex/persistent
  main-is:             relations.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time
                     , transformers

executable many-to-many
  default-language:    Haskell2010
  hs-source-dirs:      tex/persistent
  main-is:             many-to-many.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time

executable custom-fields
  default-language:    Haskell2010
  hs-source-dirs:      tex/persistent
  main-is:             custom-fields.hs
  other-modules:       Employment
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , time

executable raw-sql
  default-language:    Haskell2010
  hs-source-dirs:      tex/persistent
  main-is:             raw-sql.hs
  build-depends:       base >=4.6 && <4.7
                     , conduit
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , text
                     , time
                     , transformers

executable persistent-yesod
  default-language:    Haskell2010
  hs-source-dirs:      tex/persistent
  main-is:             persistent-yesod.hs
  build-depends:       base >=4.6 && <4.7
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , resourcet
                     , time
                     , yesod

executable postgre
  default-language:    Haskell2010
  hs-source-dirs:      tex/persistent
  main-is:             postgre.hs
  build-depends:       base >=4.6 && <4.7
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , time
                     , transformers

executable selectRep
  default-language:    Haskell2010
  hs-source-dirs:      tex/restful-content
  main-is:             selectRep.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable personJson
  default-language:    Haskell2010
  hs-source-dirs:      tex/restful-content
  main-is:             personJson.hs
  build-depends:       base >=4.6 && <4.7
                     , aeson
                     , bytestring
                     , text

executable returnJson
  default-language:    Haskell2010
  hs-source-dirs:      tex/restful-content
  main-is:             returnJson.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable provideJson
  default-language:    Haskell2010
  hs-source-dirs:      tex/restful-content
  main-is:             provideJson.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable haskell-show
  default-language:    Haskell2010
  hs-source-dirs:      tex/restful-content
  main-is:             haskell-show.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable haskell-show2
  default-language:    Haskell2010
  hs-source-dirs:      tex/restful-content
  main-is:             haskell-show2.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable haskell-show3
  default-language:    Haskell2010
  hs-source-dirs:      tex/restful-content
  main-is:             haskell-show3.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable navbar
  default-language:    Haskell2010
  hs-source-dirs:      tex/yesods-monads
  main-is:             navbar.hs
  build-depends:       base >=4.6 && <4.7
                     , monad-logger
                     , persistent-sqlite
                     , text
                     , time
                     , yesod

executable request-information
  default-language:    Haskell2010
  hs-source-dirs:      tex/yesods-monads
  main-is:             request-information.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , yesod

executable random
  default-language:    Haskell2010
  hs-source-dirs:      tex/yesods-monads
  main-is:             random.hs
  build-depends:       base >=4.6 && <4.7
                     , base16-bytestring
                     , crypto-api
                     , monadcryptorandom
                     , text
                     , yesod

executable random-instance
  default-language:    Haskell2010
  hs-source-dirs:      tex/yesods-monads
  main-is:             random-instance.hs
  build-depends:       base >=4.6 && <4.7
                     , base16-bytestring
                     , crypto-api
                     , exceptions
                     , monadcryptorandom
                     , mtl
                     , text
                     , yesod

executable authentication
  default-language:    Haskell2010
  hs-source-dirs:      tex/authentication-and-authorization
  main-is:             authentication.hs
  build-depends:       base >=4.6 && <4.7
                     , data-default
                     , http-conduit
                     , text
                     , yesod
                     , yesod-auth

executable email-authentication
  default-language:    Haskell2010
  hs-source-dirs:      tex/authentication-and-authorization
  main-is:             email-authentication.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-html
                     , hamlet
                     , mime-mail
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , shakespeare
                     , text
                     , yesod
                     , yesod-auth

executable authorization
  default-language:    Haskell2010
  hs-source-dirs:      tex/authentication-and-authorization
  main-is:             authorization.hs
  build-depends:       base >=4.6 && <4.7
                     , data-default
                     , http-conduit
                     , text
                     , yesod
                     , yesod-auth

executable i18n-synopsis
  default-language:    Haskell2010
  hs-source-dirs:      tex/internationalization
  main-is:             i18n-synopsis.hs
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable hellosub
  default-language:    Haskell2010
  hs-source-dirs:      tex/creating-a-subsite
  main-is:             Main.hs
  other-modules:       HelloSub, HelloSub.Data
  build-depends:       base >=4.6 && <4.7
                     , yesod

executable app
  default-language:    Haskell2010
  hs-source-dirs:      tex/understanding-request
  main-is:             app.hs
  build-depends:       base >=4.6 && <4.7
                     , bytestring
                     , http-types
                     , yesod
                     , wai

executable no-th-example
  default-language:    Haskell2010
  hs-source-dirs:      tex/understanding-request
  main-is:             no-th-example.hs
  build-depends:       base >=4.6 && <4.7
                     , bytestring
                     , http-types
                     , yesod
                     , yesod-core
                     , wai

executable inidata-synopsis
  default-language:    Haskell2010
  hs-source-dirs:      tex/initializing-foundation-data
  main-is:             inidata-synopsis.hs
  build-depends:       base >=4.6 && <4.7
                     , markdown
                     , text
                     , yesod

executable blog
  default-language:    Haskell2010
  hs-source-dirs:      tex/blog-example-advanced
  main-is:             blog.lhs
  build-depends:       base >=4.6 && <4.7
                     , monad-logger
                     , time
                     , persistent-sqlite
                     , yesod
                     , http-conduit
                     , http-client
                     , text
                     , yesod-auth
                     , yesod-form

executable wiki
  default-language:    Haskell2010
  hs-source-dirs:      tex/wiki-chat-example
  main-is:             Wiki.lhs
  other-modules:       Chat, Chat.Data
  build-depends:       base >=4.6 && <4.7
                     , aeson
                     , blaze-builder
                     , containers
                     , markdown
                     , template-haskell
                     , text
                     , wai-extra
                     , warp
                     , yesod
                     , yesod-auth

executable json-client
  default-language:    Haskell2010
  hs-source-dirs:      tex/json-web-service
  main-is:             json-client.hs
  build-depends:       base >=4.6 && <4.7
                     , aeson
                     , attoparsec-conduit
                     , conduit
                     , conduit-extra
                     , http-conduit
                     , transformers

executable json-server
  default-language:    Haskell2010
  hs-source-dirs:      tex/json-web-service
  main-is:             json-server.hs
  build-depends:       base >=4.6 && <4.7
                     , aeson
                     , attoparsec-conduit
                     , bytestring
                     , conduit
                     , conduit-extra
                     , http-types
                     , lifted-base
                     , transformers
                     , wai
                     , wai-conduit
                     , warp

executable 21-sphinx
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             21/source.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-markup
                     , blaze-html
                     , bytestring
                     , conduit
                     , http-types
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , pool-conduit
                     , sphinx
                     , text
                     , wai
                     , xml-conduit
                     , xml-types
                     , yesod

executable 24-hello-world
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             24/hello-world.hs
  build-depends:       base >=4.6 && <4.7
                     , http-types
                     , wai
                     , warp

executable 24-alloc
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             24/alloc.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-builder
                     , http-types
                     , wai
                     , warp

executable 24-stream
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             24/stream.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-builder
                     , http-types
                     , wai
                     , warp

executable 24-hello-world-gzip
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             24/hello-world-gzip.hs
  build-depends:       base >=4.6 && <4.7
                     , http-types
                     , wai
                     , wai-extra
                     , warp

executable 26-synopsis
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             26/synopsis.hs
  build-depends:       base >=4.6 && <4.7
                     , bytestring
                     , conduit
                     , conduit-extra
                     , http-conduit
                     , resourcet
                     , transformers

executable 26-response-body
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             26/response-body.hs
  build-depends:       base >=4.6 && <4.7
                     , bytestring
                     , http-conduit
                     , transformers

executable 26-response-head
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             26/response-head.hs
  build-depends:       base >=4.6 && <4.7
                     , bytestring
                     , http-conduit
                     , transformers

executable 27-synopsis
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/synopsis.hs
  build-depends:       base >=4.6 && <4.7
                     , containers
                     , xml-conduit
                     , xml-hamlet

executable 27-cursor
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/cursor.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , xml-conduit

executable 27-cursor-operator
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/cursor-operator.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , xml-conduit

executable 27-cursor-h1
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/cursor-h1.hs
  build-depends:       base >=4.6 && <4.7
                     , text
                     , xml-conduit

executable 27-xml
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/xml.hs
  build-depends:       base >=4.6 && <4.7
                     , containers
                     , xml-conduit

executable 27-xml-hamlet
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/xml-hamlet.hs
  build-depends:       base >=4.6 && <4.7
                     , containers
                     , xml-conduit
                     , xml-hamlet

executable 27-xml-hamlet-vars
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/xml-hamlet-vars.hs
  build-depends:       base >=4.6 && <4.7
                     , containers
                     , text
                     , xml-conduit
                     , xml-hamlet

executable 27-xml2html
  default-language:    Haskell2010
  hs-source-dirs:      hs
  main-is:             27/xml2html.hs
  build-depends:       base >=4.6 && <4.7
                     , blaze-html
                     , containers
                     , xml2html
                     , xml-conduit
                     , xml-hamlet
